5-Application of multi-cloud, multi-cluster service mesh/hipster-apps/hip2-ck8s/01-hip2-services-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: emailservice
spec:
  ports:
  - name: grpc
    port: 5000
    targetPort: 8080
  selector:
    app: emailservice
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
spec:
  ports:
  - name: grpc
    port: 5050
    targetPort: 5050
  selector:
    app: checkoutservice
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
spec:
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
  selector:
    app: paymentservice
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
spec:
  ports:
  - name: grpc
    port: 7000
    targetPort: 7000
  selector:
    app: currencyservice
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
spec:
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
  selector:
    app: shippingservice
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
spec:
  ports:
  - name: grpc
    port: 9555
    targetPort: 9555
  selector:
    app: adservice
  type: ClusterIP
---
